# rsymbolic2

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: deploy-pages.yml
benchmarks/: 01_nguyen_gate.R  01b_nguyen_gate_sqrt.R  02_blowup_probe.R  02_feynman_gate.R  03_sr_comparison.jl  05_feynman_pysr_comparison.jl  06_srjl_mechanism_screen.jl  _b1_sweep.R  _b2_sweep.R  _b3_sweep.R  analyze_restart_ceiling.R  diag_detect_from_data.R  diag_init_split.R  diag_interference.R  diag_multivar.R  diag_omp_check.R  diag_residual.R  diag_separability.R  diag_structural_audit.R  export_feynman_data.R  export_nguyen_data.R  feynman_datasets.R  nguyen_datasets.R  utils.R
cmake/: toolchain-rtools.cmake
core/: CMakeLists.txt
core/benchmarks/: benchmark_main.cpp
core/include/rsymbolic/benchmark/: problems.hpp  runner.hpp
core/include/rsymbolic/evolution/: crossover.hpp  hall_of_fame.hpp  mutation.hpp  search_space.hpp
core/include/rsymbolic/expression/: dual.hpp  least_squares_problem.hpp  node.hpp  tree.hpp
core/include/rsymbolic/optimization/: constant_optimizer.hpp  random_restart_optimizer.hpp
core/include/rsymbolic/search/: evolutionary_search.hpp
core/src/benchmark/: runner.cpp
core/src/evolution/: hall_of_fame.cpp  mutation.cpp
core/src/optimization/: eigen_lm_optimizer.cpp  optimizer_factory.cpp  random_restart_optimizer.cpp
core/src/search/: evolutionary_search.cpp
core/src/simplification/: simplify.cpp
core/tests/: test_benchmark_quick.cpp  test_dual.cpp  test_evolutionary_search.cpp  test_hall_of_fame.cpp  test_random_restart_optimizer.cpp  test_simplify.cpp  test_structural_mutation.cpp
docs/: 01_architecture_report.md  02_dependency_analysis.md  03_migration_difficulty.md  04_benchmark_strategy.md  05_implementation_roadmap.md  06_windows_dependency_risk.md  07_constant_optimization_options.md  08_mingw_build.md  09_ubuntu_build_verification.md  11_benchmark_implementation_plan.md  12_runtime_blowup_investigation_plan.md  13_parsimony_and_const_opt_plan.md  14_phase3_regression_and_pysr_plan.md  15_pysr_comparison.md  16_pysr_strict_defaults_plan.md  17_r_cmd_check_as_cran_plan.md  18_operator_extension_pow_square_plan.md  19_feynman_benchmark_plan.md  20_optimizer_deadline_propagation.md  21_timeout_overshoot_investigation.md  22_timeout_interruptible_eval.md  23_multivariate_recovery_diagnosis.md  24_adaptive_parsimony.md  25_self_lm_optimizer.md  26_feynman_pysr_comparison.md  27_pysr_default_parity.md  28_pysr_default_parity_spec.md  29_pysr_difference_catalog.md  30_throughput_profile.md  31_constant_optimization_cadence.md  32_external_speedup_claims_audit.md  33_constant_optimizer_multistart.md  34_neg_operator_parity_and_456_bisection.md  35_throughput_exhausted_recovery_parity.md  36_bfgs_float32_measured.md  37_wallclock_thread_scaling.md  38_interference_gap_investigation.md  39_tier1_optional_features.md  40_eigen_dependency_removed.md  41_rcpp_to_cpp11_migration.md  (+18 more)
python/: CMakeLists.txt  README.md  pyproject.toml
python/rsymbolic2/: __init__.py
python/src/: rsymbolic2_py.cpp
python/tests/: test_display_simplify.py  test_rsymbolic2.py  test_strong_simplify.py
r-package/: .gitignore  test_r.R
r-package/rsymbolic2/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  cran-comments.md
r-package/rsymbolic2/R/: RcppExports.R  as_data_frame_rsymbolic2.R  cpp11.R  plot_rsymbolic2.R  predict_rsymbolic2.R  print_rsymbolic2.R  rsymbolic2-package.R  summary_rsymbolic2.R  symbolic_regression.R  to_latex_rsymbolic2.R  utils.R
r-package/rsymbolic2/inst/: NOTICE
r-package/rsymbolic2/man/: as.data.frame.rsymbolic2.Rd  plot.rsymbolic2.Rd  predict.rsymbolic2.Rd  print.rsymbolic2.Rd  rsymbolic2-package.Rd  summary.rsymbolic2.Rd  symbolic_regression.Rd  to_latex.Rd
r-package/rsymbolic2/src/: .gitignore  Makevars  Makevars.win  RcppExports.cpp  cpp11.cpp  crossover.cpp  display_simplify.cpp  egraph.cpp  eigen_lm_optimizer.cpp  evolutionary_search.cpp  hall_of_fame.cpp  mutation.cpp  optimizer_factory.cpp  random_restart_optimizer.cpp  random_tree.cpp  rsymbolic2_r.cpp  self_lm_optimizer.cpp  simplify.cpp
r-package/rsymbolic2/tests/: testthat.R
r-package/rsymbolic2/tests/testthat/: test-adaptive-parsimony.R  test-display-simplify.R  test-eval-accounting.R  test-eval-cache.R  test-formula.R  test-island.R  test-latex.R  test-linear-scaling.R  test-macro-ops.R  test-new-options.R  test-operators.R  test-optimize-probability.R  test-output.R  test-parsimony.R  test-predict.R  test-print-summary.R  test-recovery.R  test-strong-simplify.R  test-timeout.R  test-units.R  test-validation.R
scripts/: build-mingw.ps1
standalone/: CMakeLists.txt
standalone/benchmarks/: bench_alloc.cpp  bench_eigen_reuse.cpp  bench_evolve.cpp  bench_heap.cpp  bench_opt_precision.cpp  bench_parallel.cpp  bench_profile.cpp  bench_soa_eval.cpp  benchmark_main.cpp  diag_seed_oracle.cpp
standalone/benchmarks/rsymbolic/benchmark/: problems.hpp
standalone/tests/: test_benchmark_quick.cpp  test_constant_fitting.cpp  test_crossover.cpp  test_dimension.cpp  test_dimensional_analysis.cpp  test_display_simplify.cpp  test_dual.cpp  test_eigen_lm_optimizer.cpp  test_eval_cache.cpp  test_evolutionary_search.cpp  test_hall_of_fame.cpp  test_island_model.cpp  test_linear_scaling.cpp  test_macro_op.cpp  test_multi_dual.cpp  test_multivariate.cpp  test_mutation_operators.cpp  test_optimizer_stop.cpp  test_progress_callback.cpp  test_random_restart_optimizer.cpp  test_random_tree.cpp  test_self_lm_optimizer.cpp  test_simplify.cpp  test_soa_eval.cpp  test_strong_simplify.cpp  test_structural_mutation.cpp  test_to_latex.cpp  test_tree_eval.cpp  test_unit_parser.cpp  test_warmup_maxsize.cpp
web/: .gitignore  README.md  serve.py
web/app/: index.html
web/app/css/: style.css
web/app/js/: data.js  examples.js  export.js  format.js  latex.js  main.js  plots.js  predict.js  worker.js
web/wasm/: CMakeLists.txt  build.ps1  build.sh  rsymbolic2_wasm.cpp
web/wasm/test/: parity_test.cjs
(+29 files in other folders)
